# Automated-Research-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
.idx/: dev.nix
chroma_db/: chroma.sqlite3
src/: __init__.py
src/research_assistant/: config.py  main.py  memory.py  orchestrator.py
src/research_assistant/agents/: assistant_agent.py  base.py  search_agent.py  summarization.py  summarizer.py  summarizer_agent.py  web_search.py
src/research_assistant/api/: __init__.py  deps.py
src/research_assistant/assistant/: __init__.py  workflow.py
src/research_assistant/llm/: providers.py
src/research_assistant/llms/: __init__.py  provider.py
src/research_assistant/memory/: __init__.py  base.py  chroma_store.py  pinecone_store.py
src/research_assistant/prompts/: __init__.py  analysis.txt  analyze_prompt.py  categorization.txt  citation.txt  direct_response_prompt.py  report.txt  search_refinement.txt  summarization.py  summarization.txt  summarize_history_prompt.py  summarize_prompt.py  synthesize_response_prompt.py  web_search.py
src/research_assistant/schemas/: __init__.py  agent_io.py  document.py  query.py  session.py
src/research_assistant/tools/: web_search.py
src/research_assistant/utils/: __init__.py  document_processor.py  embeddings.py
tests/: __init__.py
tests/test_api/: __init__.py  test_query_endpoint.py
tests/test_assistant/: __init__.py
tests/test_assistant/test_agents/: __init__.py  test_summarizer.py
tests/test_memory/: __init__.py  test_chroma_store.py
(+13 files in other folders)
