[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research_assistant"
version = "0.1.0"
# Add other metadata if you like, but name and version are often needed

[tool.setuptools.packages.find]
where = ["src"] # Tells setuptools your package is inside src